--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Merge Conflicts</h1>
-    <p>Branching with git</p>
+    <p>Branching with git -Andy's changes</p>
   </body>
 </html>
